# bit_xuanyuan_description

./: .gitignore  CMakeLists.txt  README.md  package.xml
blend/: LeftFoot.blend  LeftFoot.blend1
calib/bit_xuanyuan/: calib_data.LeftFootForceSensor  calib_data.RightFootForceSensor
convex/bit_xuanyuan/: L_ankle_1-ch.txt  L_ankle_2-ch.txt  L_ankle_6_axis-ch.txt  L_elbow_1-ch.txt  L_elbow_2-ch.txt  L_foot-ch.txt  L_gripper_1-ch.txt  L_gripper_2-ch.txt  L_hand-ch.txt  L_hip_1-ch.txt  L_hip_2-ch.txt  L_hip_3-ch.txt  L_knee_1-ch.txt  L_knee_2-ch.txt  L_shoulder_1-ch.txt  L_shoulder_2-ch.txt  L_shoulder_3-ch.txt  L_wrist_1-ch.txt  L_wrist_2-ch.txt  L_wrist_6_axis-ch.txt  R_ankle_1-ch.txt  R_ankle_2-ch.txt  R_ankle_6_axis-ch.txt  R_elbow_1-ch.txt  R_elbow_2-ch.txt  R_foot-ch.txt  R_gripper_1-ch.txt  R_gripper_2-ch.txt  R_hand-ch.txt  R_hip_1-ch.txt  R_hip_2-ch.txt  R_hip_3-ch.txt  R_knee_1-ch.txt  R_knee_2-ch.txt  R_shoulder_1-ch.txt  R_shoulder_2-ch.txt  R_shoulder_3-ch.txt  R_wrist_1-ch.txt  R_wrist_2-ch.txt  R_wrist_6_axis-ch.txt  (+4 more)
meshes/: L_ankle_1.STL  L_ankle_2.STL  L_ankle_6_axis.STL  L_elbow_1.STL  L_elbow_2.STL  L_foot.STL  L_gripper_1.STL  L_gripper_2.STL  L_hip_1.STL  L_hip_2.STL  L_hip_3.STL  L_knee_1.STL  L_knee_2.STL  L_shoulder_3.STL  L_wrist_1.STL  L_wrist_2.STL  L_wrist_6_axis.STL  R_ankle_1.STL  R_ankle_2.STL  R_ankle_6_axis.STL  R_elbow_1.STL  R_elbow_2.STL  R_foot.STL  R_gripper_1.STL  R_gripper_2.STL  R_hip_1.STL  R_hip_2.STL  R_hip_3.STL  R_knee_1.STL  R_knee_2.STL  R_shoulder_3.STL  R_wrist_1.STL  R_wrist_2.STL  R_wrist_6_axis.STL  waist_0.STL  waist_1.STL
meshes/convex/: L_ankle_1.STL  L_ankle_2.STL  L_ankle_6_axis.STL  L_elbow_1.STL  L_elbow_2.STL  (+39 more)
module/: alias.yaml  module.yaml  stabilizer.yaml
mujoco/: bit_xuanyuan.xml  bit_xuanyuan.yaml
urdf/: bit_xuanyuan.urdf  bit_xuanyuan.urdf.bk
vrep/: tweaks.yaml
(+6 files in other folders)
